--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button type="submit" id="submit" class="btn btn-info">Run</button>
         <div class="form-group">
             <label>output:</label>
-            <textarea class="form-control" rows="5" id="output"></textarea>
+            <textarea class="form-control" rows="50" id="output"></textarea>
         </div>
     </div>
 </body>
@@ -93,7 +93,8 @@
     NUMBER: 'NUMBER',
     STRING: 'STRING',
     NAME: 'NAME',
-    SYMBOL: 'SYMBOL'
+    SYMBOL: 'SYMBOL',
+    BOOLEAN: 'BOOLEAN'
   });
 
   class AbstractObject {
@@ -124,6 +125,12 @@
   class SymbolObject extends AbstractObject {
       constructor(data) {
           super(BaseTypeEnum.SYMBOL, data);
+      }
+  }
+
+  class BooleanObject extends AbstractObject {
+      constructor(data) {
+          super(BaseTypeEnum.BOOLEAN, data);
       }
   }
 }
@@ -172,7 +179,7 @@ simple_stmt= head:(small_stmt) tail:(_ ';'_ small_stmt)* (';')? NEWLINE
         ? { type: "SequenceExpression", expressions: buildList(head, tail, 3) }
         : head;
     }
-small_stmt= global_stmt/expr_stmt
+small_stmt= global_stmt/flow_stmt/expr_stmt
 expr_stmt= left:testlist_star_expr  _ operator:augassign _ right:(yield_expr/testlist) {
     return {
       type: "AssignmentExpression",
@@ -195,7 +202,8 @@ flow_stmt= break_stmt / continue_stmt / return_stmt / raise_stmt / yield_stmt
 break_stmt
 ='break'{return { type: "BreakStatement", label: null }; }
 continue_stmt= 'continue'
-return_stmt= 'return' _ (testlist)?
+return_stmt
+= 'return' _ arg:(testlist)?{return {type:"ReturnStatement", argument:arg};}
 yield_stmt= yield_expr
 raise_stmt= 'raise' _ (test ('from' test)?)?
 import_stmt= import_name / import_from
@@ -287,10 +295,18 @@ term= head:factor tail:( _ ('*'/'@'/'/'/'%'/'//') _ factor)*{return buildBinaryE
 factor= ('+'/'-'/'~') factor / power
 power= head:atom_expr tail:( _ '**' _ factor)?
 { 
-  return head;
-    }
-atom_expr= (AWAIT)? mid:atom trailer*
-{return mid;}
+  if (tail) {
+    return buildBinaryExpression(head, tail);
+  } else {
+    return head;
+  }
+}
+atom_expr= (AWAIT)? mid:atom t:trailer* {
+  if(t.length == 0)
+    return mid;
+  else
+    return {type:"AtomWithTrailer", name: mid, trailer:t};
+}
 atom= '(' _ head:(yield_expr/testlist_comp)? _ ')' 
 {
   return head;
@@ -303,12 +319,14 @@ atom= '(' _ head:(yield_expr/testlist_comp)? _ ')'
        {
           return head;
        }/
-       head:(NAME / NUMBER / STRING+ / '...' / 'None' / 'True' / 'False')
+       head:( BOOLEAN / NAME / NUMBER / STRING+ / '...' / 'None' )
       {return head;}
       
 testlist_comp= head:(test/star_expr)  tail:( _ ',' _ (test/star_expr))* (',')? 
 {return buildList(head,tail,3);}
-trailer= '('  _ (arglist)? _ ')' / '[' _  subscriptlist _ ']' /'.' NAME
+trailer= '('  _ arglist:(arglist)? _ ')' {return {type:"CallFunction", arglist:arglist};}
+        / '[' _  subscriptlist _ ']' 
+        /'.' NAME
 subscriptlist= subscript ( _ ',' _ subscript)* (',')?
 
 subscript= test / (test)? ':' (test)? (sliceop)?
@@ -325,12 +343,16 @@ dictorsetmaker=( ((test _ ':' _ test /  '**' expr)
                    
 classdef= 'class' _ NAME ( '(' _ (arglist)? _ ')' )? _ ':' _ suite
 
-arglist=argument ( _ ',' _ argument)*  (',')?
+arglist=head:argument tail:( _ ',' _ argument)*  (',')? {
+  return buildList(head, tail, 3);
+}
 
-argument= ( test (comp_for)? /
+argument= t:( test (comp_for)? /
             test '=' test /
             '**' test /
-            '*' test )
+            '*' test ) {
+              return t;
+            }
 
 comp_iter= comp_for / comp_if
 comp_for= 'for' _ exprlist _ 'in' _ or_test (comp_iter)?
@@ -369,10 +391,13 @@ NUMBER=[+-]?([0-9]*[.])?[0-9]+ {
 }
 
 STRING= '"' chars:DoubleStringCharacter* '"' {
-  return new StringObject(text());
+  return new StringObject(text().slice(1, text().length - 1));
 } / "'" chars:SingleStringCharacter* "'" {
-  return new StringObject(text());
+  return new StringObject(text().slice(1, text().length - 1));
 }
+
+BOOLEAN = 'True' {return new BooleanObject(true);} 
+        / 'False'{return new BooleanObject(false);} 
 
 DoubleStringCharacter
   = !('"' / "\\" / LineTerminator) . { return text(); }
